# typst-pack

./: .editorconfig  AGENTS.md  CONTEXT.md  Cargo.toml  PROTOTYPE-architecture-specification.md  PROTOTYPE-cli-dagger-interfaces.html  PROTOTYPE-compilation-family-identity-registry.md  PROTOTYPE-corrected-implementation-planning-specification-review.md  PROTOTYPE-dagger-ci-profile.json  PROTOTYPE-definitive-implementation-planning-specification.md  PROTOTYPE-epoch-2-writer-interoperability-corpus.md  PROTOTYPE-final-implementation-planning-specification-review.md  PROTOTYPE-first-party-cli-dagger-contracts.html  PROTOTYPE-first-party-cli-dagger-contracts.md  PROTOTYPE-first-party-cli-dagger-generated.graphql  PROTOTYPE-first-party-cli-dagger-schemas.json  PROTOTYPE-first-party-cli-dagger-serializer-probe.rs  PROTOTYPE-implementation-planning-specification-review.md  PROTOTYPE-library-module-interface.md  PROTOTYPE-native-cli-profile.json  PROTOTYPE-pack-format-epoch-2.md  PROTOTYPE-revised-implementation-planning-specification-review.md  PROTOTYPE-rust-lifecycle-adapter-consumer.rs  PROTOTYPE-rust-lifecycle-adapter-interfaces.md  PROTOTYPE-rust-lifecycle-adapter-interfaces.rs  PROTOTYPE-scale-resource-limits.html  README.md  build.rs  dagger-module.toml  dagger.dang  dagger.toml  deny.toml  devenv.nix  devenv.yaml  dist-workspace.toml  embedded-typst.toml
.cargo/: audit.toml
.dagger/modules/tests/: dagger-module.toml  dang.toml  main.dang
.dagger/modules/tests/fixtures/adapter-lifecycle/: main.typ
.dagger/modules/tests/fixtures/adapter-lifecycle-invalid/: main.typ
.dagger/modules/tests/fixtures/adapter-lifecycle-overrides/: main.typ
.dagger/modules/tests/fixtures/multi-page/: main.typ
.dagger/modules/tests/fixtures/project/: main.typ
.dagger/modules/tests/fixtures/resource-project/: main.typ
.dagger/modules/tests/fixtures/resources/first/branding/: first-only.txt
.dagger/modules/tests/fixtures/resources/second/branding/: from-second-root.txt  second-only.txt
.dagger/modules/tests/fixtures/sys-inputs/: main.typ
.dagger/modules/tests/fixtures/sys-inputs/resources/: discovered.txt
.dagger/modules/tests/fixtures/targets/: main.typ  paged.txt
.github/: dependabot.yaml
.github/workflows/: analysis-scorecard.yaml  ci.yaml  dagger.yaml  release.yml
PROTOTYPE-first-party-cli-dagger-validation/: Cargo.toml
PROTOTYPE-first-party-cli-dagger-validation/fixtures/: cases.json
PROTOTYPE-first-party-cli-dagger-validation/src/: main.rs
docs/: cli-parity.md  dagger-adapter.md  embedded-typst-upgrade.md
docs/adr/: 0002-make-pack-owner-of-whole-pack-invariants.md  0003-centralize-external-resource-reference-semantics.md  0004-model-resource-slots-and-providers.md  0005-align-cli-with-embedded-typst.md  0006-pack-the-structural-project-closure.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: platform-confinement-guarantees.md  portable-typst-project-workflows.md  project-override-layering-precedents.md  typst-compilation-artifact-constraints.md  typst-project-filesystem-semantics.md
src/: cli.rs  compile.rs  embedded.rs  external_resource.rs  extract.rs  lib.rs  main.rs  manifest.rs  pack.rs  packer.rs  resource.rs  tests.rs  world.rs  world_trace.rs
tests/: cli.rs  compilation.rs  embedded_typst_gate.rs  official_typst_cli.rs  official_typst_oracle.rs
tests/fixtures/official-oracle/: chapter.typ  main.typ
tests/support/: mod.rs  official_typst.rs  official_typst_cli.rs
